test/fixtures/astRegression/shouldSucceed/Operations.sand
pub class Operations {
    associativity() {
        a - b - c
    }
    
    precedence() {
        -a ** b + c * d - e
    }

    eirdPrecedence() {
        -if x {} ** b + - if y {} * d - e
    }
}