test/fixtures/astRegression/shouldFail/assignments/AssignmentExpression.sand
pub class AssignmentExpression {
    assExpr() {
        x(a = b;)
    }
}